[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/UI_menu/SloganMenu.gd" type="Script" id=1]
[ext_resource path="res://Images/sloganmenu.png" type="Texture" id=3]
[ext_resource path="res://UI/UI_menu/MainContainer.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/UI_menu/DescriptionDisplayer.tscn" type="PackedScene" id=5]

[node name="Slogans" type="Control"]
margin_left = -96.0
margin_top = -80.0
margin_right = 94.0
margin_bottom = 80.0
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 96, 46 )
scale = Vector2( 2, 0.78125 )
texture = ExtResource( 3 )

[node name="MainContainer" parent="." instance=ExtResource( 4 )]
res_path = "res://Scenes/UI_Objects/SloganNode.tscn"

[node name="Selector" parent="MainContainer" index="0"]
margin_left = 16.0
margin_top = 16.0
margin_right = 39.0
margin_bottom = 39.0
color = Color( 0.45, 0.95, 0.2, 1 )

[node name="NoSloganText" type="RichTextLabel" parent="."]
margin_left = 16.0
margin_top = 32.0
margin_right = 176.0
margin_bottom = 80.0
text = "Non hai nessuno slogan."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionDisplayer" parent="." instance=ExtResource( 5 )]

[node name="BattleSlogans" type="Control" parent="."]
visible = false
anchor_left = -0.137
anchor_top = 0.612
anchor_right = 0.5
anchor_bottom = 1.094
margin_left = 0.0300026
margin_top = 0.0799942
margin_bottom = -0.0400085

[node name="Background" type="ColorRect" parent="BattleSlogans"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
color = Color( 0.0862745, 0.0745098, 0.0745098, 1 )

[node name="MainContainer" parent="BattleSlogans" instance=ExtResource( 4 )]
res_path = "res://Scenes/UI_Objects/SloganNode.tscn"

[node name="Selector" parent="BattleSlogans/MainContainer" index="0"]
margin_left = 23.0
margin_top = 3.0
margin_right = 65.0
rect_scale = Vector2( 0.555, 0.702 )
color = Color( 0.85, 0.22, 0.22, 1 )

[node name="ManageSlogans" type="Control" parent="."]
visible = false
anchor_left = 0.516
anchor_top = 0.59
anchor_right = 1.168
anchor_bottom = 1.112
margin_left = -0.0400085
margin_top = 0.600006
margin_right = 0.0799866
margin_bottom = 0.0799866
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="ManageSlogans"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="ManageSlogans/Panel"]
anchor_left = 0.012
anchor_top = 0.006
anchor_right = 0.988
anchor_bottom = 0.5
margin_left = 0.512
margin_top = 0.502
margin_right = 0.487999
margin_bottom = 39.5
text = "Sia \"Nome Dello Slogan\" slogan di battaglia?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="Control" parent="ManageSlogans/Panel"]
anchor_top = 0.743
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.0429993
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yes" type="Button" parent="ManageSlogans/Panel/Container"]
margin_left = 4.0
margin_top = -1.0
margin_right = 52.0
margin_bottom = 19.0
text = "Si faccia"

[node name="No" type="Button" parent="ManageSlogans/Panel/Container"]
margin_left = 73.0
margin_top = -1.0
margin_right = 121.0
margin_bottom = 19.0
text = "Nah"
__meta__ = {
"_edit_use_anchors_": false
}

[editable path="MainContainer"]
[editable path="BattleSlogans/MainContainer"]
